Page des statistiques

--- a/frontend/templates/themes_admin/themes_caissier/homepage_car.html
+++ b/frontend/templates/themes_admin/themes_caissier/homepage_car.html
@@ -278,7 +278,7 @@
     }
 
     .background {
-        background-image: url('{% static "themes_admin/img/Back.jpg" %}');
+        background-image: url('{% static "themes_admin/img/phar.jpg" %}');
         background-size: cover;
         background-position: center;
         width: 100%;
