--- a/frontend/templates/themes_admin/inscription.html
+++ b/frontend/templates/themes_admin/inscription.html
@@ -7,54 +7,71 @@
     <title>PharmApp</title>
     <link rel="icon" href="{% static 'themes_client/images/logo.jpg' %}" sizes="64x64 128x128" type="image/jpg">
 
-    <div class="body-page" id="body-page">
-        <div class="login">
-            <div class="card">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-lg-6 d-none d-xl-block d-lg-block">
-                            <img src="{% static 'themes_admin/img/login.jpg' %}" class="img-thumbnail" style="margin-top: 150px;">
-                        </div>                        
-                        <div class="col-lg-6">
-                            <h1 class="mb-3">Création des comptes utilisateurs</h1>
-                            <form method="post" action="{% url 'inscription' %}">
-                                {% csrf_token %}
-                                <div class="form-group">
-                                    <label for="id_nomUtilisateur">Nom de l'utilisateur</label>
-                                    {{ form.nomUtilisateur }}
+<style>
+    /* Ajoutez ce CSS dans votre fichier 'login.css' */
+    .login .card {
+        max-width: 100%; /* Ajustez la largeur selon vos besoins */
+        margin: auto; /* Centrer la carte */
+    }
+</style>
+
+<div class="body-page" id="body-page">
+    <div class="login">
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-lg-6 d-none d-xl-block d-lg-block">
+                        <img src="{% static 'themes_admin/img/login.jpg' %}" class="img-thumbnail" style="margin-top: 150px; max-width=50%;">
+                    </div>                        
+                    <div class="col-lg-6">
+                        <h1 class="mb-3">Création des comptes utilisateurs</h1>
+                        <form method="post" action="{% url 'inscription' %}">
+                            {% csrf_token %}
+                            <div class="form-row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="id_nomUtilisateur">Nom de l'utilisateur</label>
+                                        {{ form.nomUtilisateur }}
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="id_numeroUtilisateur">Numéro de l'utilisateur</label>
+                                        <input type="text" id="id_numeroUtilisateur" name="numeroUtilisateur" class="form-control">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="id_emailUtilisateur">Adresse Email</label>
+                                        {{ form.emailUtilisateur }}
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="id_prenomUtilisateur">Prénom de l'utilisateur</label>
-                                    {{ form.prenomUtilisateur }}
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="id_prenomUtilisateur">Prénom de l'utilisateur</label>
+                                        {{ form.prenomUtilisateur }}
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="id_adresseUtilisateur">Adresse de l'utilisateur</label>
+                                        {{ form.adresseUtilisateur }}
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="id_motDePasse">Mot de Passe</label>
+                                        {{ form.motDePasse }}
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="id_role">Rôle</label>
+                                        {{ form.role }}
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="id_numeroUtilisateur">Numéro de l'utilisateur</label>
-                                    <input type="text" id="id_numeroUtilisateur" name="numeroUtilisateur" class="form-control">
-                                </div>
-                                <div class="form-group">
-                                    <label for="id_adresseUtilisateur">Adresse de l'utilisateur</label>
-                                    {{ form.adresseUtilisateur }}
-                                </div>
-                                <div class="form-group">
-                                    <label for="id_emailUtilisateur">Adresse Email</label>
-                                    {{ form.emailUtilisateur }}
-                                </div>
-                                <div class="form-group">
-                                    <label for="id_motDePasse">Mot de Passe</label>
-                                    {{ form.motDePasse }}
-                                </div>
-                                <div class="form-group">
-                                    <label for="id_role">Rôle</label>
-                                    {{ form.role }}
-                                </div>
-                                <div class="align-left">
-                                    <button type="submit" class="btn btn-info">S'inscrire</button>
-                                </div>
-                            </form>
-                        </div>
+                            </div>
+                            <br>
+                            <br>
+                            <div class="align-left">
+                                <button type="submit" class="btn btn-info">S'inscrire</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
+
 {% endblock %}
