--- a/frontend/templates/themes_admin/themes_caissier/medicine_select.html
+++ b/frontend/templates/themes_admin/themes_caissier/medicine_select.html
@@ -181,7 +181,7 @@
             {% for medicament in selection.donnees %}
             <tr>
                 <td>{{ medicament.nom }}</td>
-                <td>{{ medicament.prix }}</td>
+                <td>{{ medicament.prix_unitaire }}</td>
                 <td>{{ medicament.quantite }}</td>
             </tr>
             {% endfor %}
