--- a/frontend/templates/themes_client/details_livraison.html
+++ b/frontend/templates/themes_client/details_livraison.html
@@ -1,4 +1,4 @@
-{% extends "themes_client/index.html" %}
+{% extends "themes_client/homepage_cli.html" %}
 {% block content %}
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 <style>
