--- a/frontend/templates/themes_client/formulaire_commande.html
+++ b/frontend/templates/themes_client/formulaire_commande.html
@@ -1,5 +1,4 @@
-
-{% extends "themes_client/index.html" %}
+{% extends "themes_client/homepage_cli.html" %}
 {% block content %}
 {% load static %}
 
