--- a/frontend/templates/themes_client/shop-single.html
+++ b/frontend/templates/themes_client/shop-single.html
@@ -72,7 +72,7 @@
               <div class="col-md-6">
                   <h2 class="text-black">{{ medicament.nomMedicament }}</h2>
                   <p>{{ medicament.libelle }}</p>
-                  <p><del>{{ medicament.prixUnitaire }}</del>  <strong class="text-primary h4">{{ medicament.prixUnitaire }}</strong></p>
+                  <p><strong class="text-primary h4">{{ medicament.prixUnitaire }} FCFA</strong></p>
             
             
             
