--- a/frontend/templates/themes_client/homepage_cli.html
+++ b/frontend/templates/themes_client/homepage_cli.html
@@ -6,33 +6,39 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     <script src="https://kit.fontawesome.com/18695b64bb.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
     <link rel="stylesheet" href="{% static 'themes_admin/css/bootstrap.min.css' %}">
     <script src="{% static 'themes_admin/js/popper.min.js' %}"></script>
 
     <link rel="stylesheet" href="{% static 'themes_admin/css/master.css' %}">
     <link rel="stylesheet" href="{% static 'themes_admin/css/add_category.css' %}">
     
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+       crossorigin="">
+    </script>
+  
 
     <title>PharmApp</title>
     <link rel="icon" href="{% static 'themes_admin/img/logo.jpg' %}" sizes="64x64 128x128" type="image/jpg">
-
-    
 
 </head>
 
 <body>
 
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
-     <!-- Start Sidebar -->
 
-     <div class="wrapper">
+    <!-- Start Sidebar -->
+
+    <div class="wrapper">
 
         <nav id="sidebar" class="sidebar">
 
@@ -64,7 +70,7 @@
                     <div class="card-header">
                         <h2>
                             <button class="btn btn-link btn-block text-left" type="button">
-                                <a href="{% url 'homepage_phar' %}" class="icon-home"><i class="fa fa-fw fa-home"></i><span
+                                <a href="{% url 'homepage_cli' %}" class="icon-home"><i class="fa fa-fw fa-home"></i><span
                                         style="margin-left: 2px;">Acceuil</span></a>
                             </button>
                         </h2>
@@ -73,35 +79,13 @@
                 
 
                 <div class="card">
-                    <div class="card-header" id="headingThree">
-                        <h2>
-                            <button class="btn btn-link btn-block text-left collapsed" type="button"
-                                data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
-                                aria-controls="collapseThree">
-                                <a class="option-name"><i class="fas fa-capsules"></i><span
-                                        style="margin-left:4px;">Medicaments</span></a>
-                            </button>
-                        </h2>
-                    </div>
-                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
-                        data-parent="#accordionExample">
-                        <div class="card-body">
-                            <ul>
-                                <li><a href="{% url 'creer_commande' %}">Creation de commande</a></li>
-                                <li><a href="{% url 'pharmacien_affichage_med' %}">Liste des médicaments</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card">
                     <div class="card-header" id="headingFour">
                         <h2>
                             <button class="btn btn-link btn-block text-left collapsed" type="button"
                                 data-toggle="collapse" data-target="#collapseFour" aria-expanded="false"
                                 aria-controls="collapseFour">
-                                <a class="option-name"><i class="fas fa-box"></i><span
-                                        style="margin-left:4px;">Commandes</span></a>
+                                <a class="option-name"><i class="fas fa-capsules"></i><span
+                                        style="margin-left:4px;">Commander en ligne</span></a>
                             </button>
                         </h2>
                     </div>
@@ -109,20 +93,42 @@
                         data-parent="#accordionExample">
                         <div class="card-body">
                             <ul>
-                                <li><a href="{% url 'journal_medicaments_selectionnes' %}">Liste des commandes</a></li>
-                                
-                                <li><a href="{% url 'liste_commandes_virtuelles' %}">Commandes virtuelles</a></li>
-                                                         
+                                <li><a href="{% url 'commande_client' %}">Passer une commande</a></li>
+                                <li><a href="{% url 'cart' %}">Suivre la commande</a></li>
+                                <li><a href="{% url 'details_livraison_client' %}">Suivre la livraison</a></li>
                             </ul>
                         </div>
                     </div>
-                </div>
+                </div> 
+
+                <div class="card">
+                    <div class="card-header" id="headingFive">
+                        <h2>
+                            <button class="btn btn-link btn-block text-left collapsed" type="button"
+                                data-toggle="collapse" data-target="#collapseFive" aria-expanded="false"
+                                aria-controls="collapseFive">
+                                <a class="option-name"><i class="fas fa-capsules"></i><span
+                                        style="margin-left:4px;">Historique</span></a>
+                            </button>
+                        </h2>
+                    </div>
+                    <div id="collapseFive" class="collapse" aria-labelledby="headingFive"
+                        data-parent="#accordionExample">
+                        <div class="card-body">
+                            <ul>
+                                <li><a href="{% url 'historique_commandes' %}">Historique des livraisons</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div> 
+
             </div>
         </nav>
     </div>
 
     <!-- End Sidebar -->
-  
+    
+
 
     <!-- Start Navbar -->
 
@@ -148,7 +154,7 @@
 
                             <div class="notification-heading">
                                 <h4 class="menu-title">NOTIFICATIONS</h4>
-                                <h4 class="menu-title pull-right">Tout Voir<i
+                                <h4 class="menu-title pull-right">Tout voir<i
                                         class="glyphicon glyphicon-circle-arrow-right"></i>
                                 </h4>
                             </div>
@@ -162,7 +168,7 @@
                                                 <i class="fas fa-hourglass-end"></i>
                                             </div>
                                             <div>
-                                                <h4 class="item-title">Date d'expiration</h4>
+                                                <h4 class="item-title">Date de péremption du médicament</h4>
                                             </div>
                                         </div>
                                     </div>
@@ -186,7 +192,7 @@
                             </div>
                             <li class="divider"></li>
                             <div class="notification-footer">
-                                <h4 class="menu-title">Tout Voir<i class="glyphicon glyphicon-circle-arrow-right"></i>
+                                <h4 class="menu-title">View all<i class="glyphicon glyphicon-circle-arrow-right"></i>
                                 </h4>
                             </div>
                         </ul>
@@ -217,7 +223,7 @@
                                                 <i class="	fa fa-user-o" id="fa-user" style="margin-top: 1px"></i>
                                             </div>
                                             <div class="p-user">
-                                                <p>Mon Profile</p>
+                                                <p>Mon Profil</p>
                                             </div>
                                         </div>
                                     </div>
@@ -232,7 +238,7 @@
                                                 <i class="fas fa-edit" id="fa-edit"></i>
                                             </div>
                                             <div class="p-user">
-                                                <p>Modifier mon Profile</p>
+                                                <p>Edit Profile</p>
                                             </div>
                                         </div>
                                     </div>
@@ -246,7 +252,7 @@
                                                 <i class="fa fa-sign-out" id="fa-sign"></i>
                                             </div>
                                             <div class="p-user">
-                                                <p>Se déconnecter</p>
+                                                <p>Déconnecter</p>
                                             </div>
                                         </div>
                                     </div>
@@ -260,12 +266,12 @@
         </nav>
     </div>
 
+
     <!-- End Navbar -->
 
+    <!-- Start Body -->
     {% block content %}
-
     <style>
-        /* Existing Styles */
         body, html {
             margin: 0;
             padding: 0;
@@ -274,7 +280,7 @@
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f9;
         }
-        
+    
         .background {
             background-image: url('{% static "themes_admin/img/phar.jpg" %}');
             background-size: cover;
@@ -285,164 +291,103 @@
             justify-content: center;
             align-items: center;
             position: relative;
-            flex-direction: column;
         }
-        
+    
         .centered-text {
             color: white;
-            font-size: 48px;
+            font-size: 64px;
             font-weight: bold;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
             text-align: center;
-            margin-bottom: 20px;
-        }
-        
-        .chart-row {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 20px;
-            margin-top: 20px;
+            margin: 0;
         }
     
-        .chart-container {
-            width: 300px;
-            height: 300px;
-            background: rgba(255, 255, 255, 0.8);
+        .content-container {
+            max-width: 800px;
+            padding: 20px;
+            background: rgba(255, 255, 255, 0.9);
             border-radius: 10px;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-            padding: 10px;
-        }
-    
-        .chart-title {
-            font-size: 18px;
-            color: #333;
+            margin: 40px auto;
             text-align: center;
-            margin-top: 10px;
+            animation: fadeIn 1.5s ease-in-out;
         }
-        
-        /* Responsive Adjustments */
-        @media (max-width: 768px) {
-            .centered-text {
-                font-size: 36px;
-            }
     
-            .chart-row {
-                flex-direction: column;
-            }
+        .title {
+            font-size: 36px;
+            color: #333;
+            margin-bottom: 20px;
+        }
     
-            .chart-container {
-                width: 250px;
-                height: 250px;
+        .description {
+            font-size: 18px;
+            color: #666;
+            line-height: 1.6;
+            text-align: justify;
+            margin-bottom: 20px;
+        }
+    
+        .description strong {
+            color: #333;
+        }
+    
+        .cta-button {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 18px;
+            color: #fff;
+            background-color: #03BB00;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease-in-out;
+            text-decoration: none;
+        }
+    
+        .cta-button:hover {
+            background-color: #028a07;
+        }
+    
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
             }
         }
     </style>
     
     <div class="background">
-        <div class="centered-text">Bienvenue pharmacien(ienne) de<br> la pharmacie PharmApp</div>
-    
-        <div class="chart-row">
-            <div class="chart-container">
-                <canvas id="dailyChart"></canvas>
-                <div class="chart-title">Nombre Journalier</div>
-            </div>
-    
-            <div class="chart-container">
-                <canvas id="monthlyChart"></canvas>
-                <div class="chart-title">Nombre Mensuel</div>
-            </div>
-        </div>
+        <div class="centered-text">Bienvenue {{ request.session.user_name }}</div>
     </div>
-    
-    <script>
-        async function fetchChartData() {
-            const response = await fetch("{% url 'chart_data' %}");
-            const data = await response.json();
-    
-            // Data for daily chart
-            const dailyData = {
-                labels: data.daily.labels,
-                datasets: [{
-                    label: 'Nombre de Médicaments',
-                    data: data.daily.data,
-                    backgroundColor: ['#4CAF50', '#F44336'],
-                    borderColor: ['#388E3C', '#D32F2F'],
-                    borderWidth: 1
-                }]
-            };
-    
-            // Config for daily chart
-            const dailyConfig = {
-                type: 'pie', // Change type if needed
-                data: dailyData,
-                options: {
-                    responsive: true,
-                    plugins: {
-                        legend: {
-                            position: 'top',
-                        },
-                        title: {
-                            display: true,
-                            text: 'Nombre Journalier de Médicaments'
-                        }
-                    }
-                }
-            };
-    
-            // Data for monthly chart
-            const monthlyData = {
-                labels: data.monthly.labels,
-                datasets: [{
-                    label: 'Nombre de Médicaments',
-                    data: data.monthly.data,
-                    backgroundColor: ['#4CAF50', '#F44336'],
-                    borderColor: ['#388E3C', '#D32F2F'],
-                    borderWidth: 1
-                }]
-            };
-    
-            // Config for monthly chart
-            const monthlyConfig = {
-                type: 'pie', // Change type if needed
-                data: monthlyData,
-                options: {
-                    responsive: true,
-                    plugins: {
-                        legend: {
-                            position: 'top',
-                        },
-                        title: {
-                            display: true,
-                            text: 'Nombre Mensuel de Médicaments'
-                        }
-                    }
-                }
-            };
-    
-            // Render charts
-            new Chart(document.getElementById('dailyChart'), dailyConfig);
-            new Chart(document.getElementById('monthlyChart'), monthlyConfig);
-        }
-    
-        fetchChartData();
-    </script>
-    
+       
     {% endblock content %}
     
 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+
+        
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
+    <script src="https://cdn.datatables.net/responsive/2.2.7/js/dataTables.responsive.min.js"></script>
+    <script src="https://cdn.datatables.net/responsive/2.2.7/js/responsive.bootstrap4.min.js"></script>
 
 
-<!-- Scripts -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7HUiX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
-<script src="https://cdn.datatables.net/responsive/2.2.7/js/dataTables.responsive.min.js"></script>
-<script src="https://cdn.datatables.net/responsive/2.2.7/js/responsive.bootstrap4.min.js"></script>
-<script src="{% static 'themes_admin/js/main.js' %}"></script>
-<script src="{% static 'themes_admin/js/themes.js' %}"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
+    <script src="{% static 'themes_admin/js/main.js' %}"></script>
+    <script src="{% static 'themes_admin/js/themes.js' %}"></script>
 </body>
+
 </html>
