--- a/frontend/templates/themes_client/index.html
+++ b/frontend/templates/themes_client/index.html
@@ -126,13 +126,7 @@
                 <li><a href="{% url 'shop' %}">Boutique</a></li>
                 <li><a href="{% url 'about' %}">A Propos</a></li>
                 <li><a href="{% url 'contact' %}">Contact</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Commander</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="{% url 'redirection_commande' %}">Commander en Ligne</a></li>
-                        <li><a href="{% url 'cart' %}">Suivi de Commande</a></li>
-                        <li><a href="{% url 'details_livraison_client' %}">Suivi de Livraison</a></li>
-                        <li><a href="{% url 'historique_commandes' %}">Historique des Commandes</a></li>
+                <li><a href="{% url 'redirection_commande' %}">Commander</a></li>
                 </ul>
                 </li>
               </ul>
@@ -265,8 +259,8 @@
                       <div class="no-image">Image non disponible</div>
                   </div>
                   {% endif %}
-                  <h3 class="text-dark"><a href="{% url 'shop_single' %}">{{ medicament.nomMedicament }}</a></h3>
-                  <p class="price"><del>{{ medicament.prixUnitaire }}</del> &mdash; {{ medicament.prixUnitaire }}</p>
+                  <h3 class="text-dark"><a href="#">{{ medicament.nomMedicament }}</a></h3>
+                  <p class="price">{{ medicament.prixUnitaire }} FCFA</p>
               </a>
           </div>
           {% endfor %}
